feat: [SRTP-209] update mapping (#52)
