# src/main/java/it/gov/pagopa/rtp/activator/controller/rtp/RtpDtoMapper.java
@@ -10,16 +10,18 @@ import it.gov.pagopa.rtp.activator.model.generated.send.CreateRtpDto;
 
 @Component
 public class RtpDtoMapper {
-    public Rtp toRtp(CreateRtpDto createRtpDto) {
+  public Rtp toRtp(CreateRtpDto createRtpDto) {
 
     return Rtp.builder().noticeNumber(createRtpDto.getPaymentNotice().getNoticeNumber())
         .amount(createRtpDto.getPaymentNotice().getAmount()).resourceID(ResourceID.createNew())
         .description(createRtpDto.getPaymentNotice().getDescription())
         .expiryDate(createRtpDto.getPaymentNotice().getExpiryDate())
         .savingDateTime(LocalDateTime.now())
+        .payerName(createRtpDto.getPayer().getName())
         .payerId(createRtpDto.getPayer().getPayerId()).payeeName(createRtpDto.getPayee().getName())
         .payeeId(createRtpDto.getPayee().getPayeeId()).rtpSpId("rtpSpId").endToEndId("endToEndId").iban("iban")
-        .payTrxRef("payTrxRef").flgConf("flgConf").build();
+        .subject(createRtpDto.getPaymentNotice().getSubject())
+        .payTrxRef(createRtpDto.getPayee().getPayTrxRef()).flgConf("flgConf").build();
   }
 
 }
